Additional example notebooks.

--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -140,15 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, you can compile the code by executing\n",
-    "\n",
-    "```bash\n",
-    "cd portfolio_code/build\n",
-    "cmake ..\n",
-    "make\n",
-    "```\n",
-    "\n",
-    "Afterwards, you can use the compiled python wrapper as a custom CVXPY solve method:"
+    "Now, you can use a python wrapper around the generated code as a custom CVXPY solve method:"
    ]
   },
   {
