Adjusted example notebooks.

--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -8,55 +8,59 @@
     "\n",
     "To determine the optimal control input $u \\in \\mathbb{R}^m$ applied to the linear time-invariant (LTI) system $\\left( A, B\\right) \\in \\left( \\mathbb{R}^{n \\times n}, \\mathbb{R}^{n \\times m} \\right)$ with state $x \\in \\mathbb{R}^n$, we solve the following optimization problem:\n",
     "\n",
-    "\\begin{align}\n",
-    "\\min_{\\{x^i, u^i\\}}. \\quad & \\Vert x^N \\Vert_P^2 + \\sum_{i=0}^{N-1} \\Vert x^i \\Vert_Q^2 + \\Vert u^i \\Vert_R^2\\\\\n",
-    "\\text{s.t.} \\quad &x^{i+1} = A x^i + B u^i \\quad \\forall i \\in \\{0, ..., N-1\\} \\\\\n",
-    "& \\Vert u^i \\Vert_\\infty \\leq u^\\mathrm{max} \\quad \\forall i \\in \\{0, ..., N-1\\} \\\\\n",
-    "\\end{align}\n",
+    "\\begin{equation}\n",
+    "\\begin{array}{II}\n",
+    "\\text{minimize} \\quad & x_H^T P x_H + \\sum_{i=0}^{H-1} x_i^T Q x_i + u_i^T R u_i\\\\\n",
+    "\\text{subject to} \\quad &x_{i+1} = A x_i + B u_i \\quad \\forall i \\in \\{0, ..., H-1\\} \\\\\n",
+    "& \\Vert u_i \\Vert_\\infty \\leq 1 \\quad \\forall i \\in \\{0, ..., H-1\\} \\\\\n",
+    "& x_0 = x_\\mathrm{init} \\\\\n",
+    "\\end{array}\n",
+    "\\end{equation}\n",
     "\n",
-    "The prediction horizon is $N$, the control input is constrained within a box of size $u^\\mathrm{max}$ and the cost matrices are positive definite: $P, Q, R \\in \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^m$. Usually, $P$ is chosen as the solution to the discrete-time algebraic Riccati equation for the given LTI system and cost matrices $Q, R$.\n",
+    "The prediction horizon is $H$, the control input is constrained within a box of size $u^\\mathrm{max}$ and the cost matrices are positive definite: $P, Q, R \\in \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^m$. Usually, $P$ is chosen as the solution to the discrete-time algebraic Riccati equation for the given LTI system and cost matrices $Q, R$. The initial measured state is $x_\\mathrm{init}$. We arrange to state and input variables to matrices $X$ and $U$ with $X_{:,i} = x_i$ and $U_{:,i} = u_i$, respectively, and reformulate the problem to be [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming):\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{array}{II}\n",
+    "\\text{minimize} \\quad & \\Vert P^{1/2} X_{:,H} \\Vert_2^2 + \\Vert Q^{1/2} X_{:,0:H-1} \\Vert_F^2 + \\Vert R^{1/2} U \\Vert_F^2\\\\\n",
+    "\\text{subject to} \\quad &X_{:,1:H} = A X_{:,0:H-1} + B U \\\\\n",
+    "& | U | \\leq 1 \\\\\n",
+    "& X_{:,0} = x_\\mathrm{init} \\\\\n",
+    "\\end{array}\n",
+    "\\end{equation}\n",
     "\n",
     "Let's define the corresponding CVXPY problem:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cvxpy as cp\n",
     "\n",
     "# define dimensions\n",
-    "N, n, m = 10, 3, 2\n",
+    "H, n, m = 10, 3, 2\n",
     "\n",
     "# define variables\n",
-    "u = []\n",
-    "x = []\n",
-    "for i in range(N-1):\n",
-    "    u.append(cp.Variable(m, name='u_%d' % i))\n",
-    "    x.append(cp.Variable(n, name='x_%d' % i))\n",
-    "x.append(cp.Variable(n, name='x_%d' % N))\n",
+    "U = cp.Variable((m, H), name='U')\n",
+    "X = cp.Variable((n, H+1), name='X')\n",
     "\n",
     "# define parameters\n",
-    "P = cp.Parameter((n, n), PSD=True, name='P')\n",
-    "Q = cp.Parameter((n, n), PSD=True, name='Q')\n",
-    "R = cp.Parameter((m, m), PSD=True, name='R')\n",
+    "Psqrt = cp.Parameter((n, n), name='Psqrt')\n",
+    "Qsqrt = cp.Parameter((n, n), name='Qsqrt')\n",
+    "Rsqrt = cp.Parameter((m, m), name='Rsqrt')\n",
     "A = cp.Parameter((n, n), name='A')\n",
     "B = cp.Parameter((n, m), name='B')\n",
-    "u_max = cp.Parameter(name='u_max')\n",
+    "x_init = cp.Parameter(n, name='x_init')\n",
     "\n",
     "# define objective\n",
-    "obj_func = cp.quad_form(x[len(x)-1], P)\n",
-    "for i in range(N-1):\n",
-    "    obj_func += (cp.quad_form(x[i], Q) + cp.quad_form(u[i], R))\n",
-    "objective = cp.Minimize(obj_func)\n",
+    "obj_func = cp.sum_squares(Psqrt@X[:,H-1]) + cp.sum_squares(Qsqrt@X[:,0:H-1]) + cp.sum_squares(Rsqrt@U)\n",
     "\n",
     "# define constraints\n",
-    "constraints = []\n",
-    "for i in range(N-1):\n",
-    "    constraints.append(x[i+1] == A@x[i] + B@u[i])\n",
-    "    constraints.append(cp.norm(u[i], 'inf') <= u_max)\n",
+    "constraints = [X[:,1:] == A@X[:,:H]+B@U,\n",
+    "               cp.abs(U) <= 1,\n",
+    "               X[:,0] == x_init]\n",
     "\n",
     "# define problem\n",
     "problem = cp.Problem(objective, constraints)"
