--- a/examples/actuator.ipynb
+++ b/examples/actuator.ipynb
@@ -6,31 +6,35 @@
    "source": [
     "## Actuator Control Allocation Example\n",
     "\n",
-    "When controlling physical systems like spacecraft or automobiles, the controller commands a desired control input $u \\in \\mathbb{R}^m$, which might be a thrust vector, for example. \n",
+    "When controlling physical systems like spacecraft or automobiles, the controller commands a desired control input $w \\in \\mathbb{R}^m$, which might be a wrench vector, containg forces and torques ($m=6$).\n",
     "\n",
-    "Usually, multiple atuators are available to produce this control input. The vector $x \\in \\mathbb{R}^n$ contains the single actuator input values in its components. If $n > m$ and the actuators are in general position, we call the system \"over-actuated\", since there are many realizations of $x$ that result in the same value of $u$ via the linear mapping $A$. \n",
+    "Usually, multiple atuators are available to produce this control input. The vector $u \\in \\mathbb{R}^n$ contains the single actuator input values in its components. If $n > m$ and the actuators are in general position, we call the system \"over-actuated\", since there are many realizations of $u$ that result in the same value of $w$ via the linear mapping $A$. \n",
     "\n",
-    "Having this freedom of choice, we want to minimize energy consumption, modeled as $\\kappa^\\intercal | x |$ (with $\\kappa \\geq 0$), while discouraging rapid changes of the actuation values, i.e., $\\Vert x-x^\\mathrm{prev} \\Vert_2^2$ with $x^\\mathrm{prev}$ being the actuation of the previous time step. Given the bounds $x^\\mathrm{min/max}$ on $x$, there might be cases when the desired control input $u$ is infeasible. Hence, we only softly penalize deviations between desired and actual control input with the cost term $\\Vert A x - u \\Vert_2^2$. The resulting optimization problem is the following:\n",
+    "Having this freedom of choice, we want to minimize energy consumption, modeled as $\\kappa^T | u |$ (with $\\kappa \\geq 0$), while discouraging rapid changes of the actuation values, i.e., $\\lambda^\\mathrm{sm} \\Vert u-u^\\mathrm{prev} \\Vert_2^2$ with $\\lambda^\\mathrm{sm} \\geq 0$ and $u^\\mathrm{prev}$ being the actuation of the previous time step. Given the bounds $u^\\mathrm{min}$ and $u^\\mathrm{max}$ $(u^\\mathrm{min} \\leq u^\\mathrm{max})$ on $u$, there might be cases when the desired control input $w$ is infeasible. Hence, we only softly penalize deviations between desired and actual control input with the cost term $\\Vert A u - w \\Vert_2^2$. The resulting optimization problem is the following:\n",
     "\n",
-    "\\begin{align}\n",
-    "\\min_{x}. \\quad &\\Vert A x - u \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert x-x^\\mathrm{prev} \\Vert_2^2 + \\kappa^\\intercal | x |\\\\\n",
-    "\\text{s.t.} \\quad &x^\\mathrm{min} \\leq x \\leq x^\\mathrm{max}\n",
-    "\\end{align}\n",
+    "\\begin{equation}\n",
+    "\\begin{array}{II}\n",
+    "\\text{minimize} \\quad &\\Vert A u - w \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert u-u^\\mathrm{prev} \\Vert_2^2 + \\kappa^T | u |\\\\\n",
+    "\\text{subject to} \\quad &u^\\mathrm{min} \\leq u \\leq u^\\mathrm{max}\n",
+    "\\end{array}\n",
+    "\\end{equation}\n",
     "\n",
-    "We perform an epigraph reformulation to obtain a quadratic objective function:\n",
+    "We introduce the variable $\\Delta u = u - u^\\mathrm{prev}$ to make the problem [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming):\n",
     "\n",
-    "\\begin{align}\n",
-    "\\min_{x, t}. \\quad &\\Vert A x - u \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert x-x^\\mathrm{prev} \\Vert_2^2 + \\kappa^\\intercal t\\\\\n",
-    "\\text{s.t.} \\quad &x^\\mathrm{min} \\leq x \\leq x^\\mathrm{max} \\\\\n",
-    "&| x | \\leq t\n",
-    "\\end{align}\n",
+    "\\begin{equation}\n",
+    "\\begin{array}{II}\n",
+    "\\text{minimize} \\quad &\\Vert A u - w \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert \\Delta u \\Vert_2^2 + \\kappa^T | u |\\\\\n",
+    "\\text{subject to} \\quad &u^\\mathrm{min} \\leq u \\leq u^\\mathrm{max} \\\\\n",
+    "&\\Delta u = u-u^\\mathrm{prev}\n",
+    "\\end{array}\n",
+    "\\end{equation}\n",
     "\n",
     "Let's define the corresponding CVXPY problem:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,23 +44,23 @@
     "n, m = 3, 4\n",
     "\n",
     "# define variables\n",
-    "x = cp.Variable(n, name='x')\n",
-    "t = cp.Variable(n, name='t')\n",
+    "u = cp.Variable(n, name='u')\n",
+    "delta_u = cp.Variable(n, name='delta_u')\n",
     "\n",
     "# define parameters\n",
     "A = cp.Parameter((m, n), name='A')\n",
-    "u = cp.Parameter(m, name='u')\n",
+    "w = cp.Parameter(m, name='w')\n",
     "lamb_sm = cp.Parameter(nonneg=True, name='lamb_sm')\n",
-    "kappa = cp.Parameter(n, name='kappa')\n",
-    "x_prev = cp.Parameter(n, name='x_prev')\n",
-    "x_min = cp.Parameter(n, name='x_min')\n",
-    "x_max = cp.Parameter(n, name='x_max')\n",
+    "kappa = cp.Parameter(n, nonneg=True, name='kappa')\n",
+    "u_prev = cp.Parameter(n, name='u_prev')\n",
+    "u_min = cp.Parameter(n, name='u_min')\n",
+    "u_max = cp.Parameter(n, name='u_max')\n",
     "\n",
     "# define objective\n",
-    "objective = cp.Minimize(cp.sum_squares(A@x-u) + lamb_sm*cp.sum_squares(x-x_prev) + kappa@t)\n",
+    "objective = cp.Minimize(cp.sum_squares(A@u-w) + lamb_sm*cp.sum_squares(delta_u) + kappa@cp.abs(u))\n",
     "\n",
     "# define constraints\n",
-    "constraints = [x_min <= x, x <= x_max, cp.abs(x) <= t]\n",
+    "constraints = [u_min <= u, u <= u_max, delta_u == u-u_prev]\n",
     "\n",
     "# define problem\n",
     "problem = cp.Problem(objective, constraints)"
