--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -4,19 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resource Allocation Example\n",
+    "## Network Flow Optimization Example\n",
     "\n",
-    "Assume we have to assign resources of $m$ classes to $n$ kinds of jobs. This resource allocation is encoded in $X \\in \\mathbb{R}^{n \\times m}$, with $X_{i,j}$ denoting the amount of resource $j$ allocated to job $i$. Given the utility matrix $W$, we want to solve the following optimization problem:\n",
+    "We have a network of $m$ directed edges that support $n$ flows, each of which goes over a fixed path in the graph.  We denote the flow values as $f \\in \\mathbb{R}_+^n$.  The resulting traffic on the $m$ edges is given by $R f$, where $R \\in \\{0,1\\}^{m \\times n}$ is the routing matrix, with $R_{ij}=1$ if flow $j$ goes over edge $i$, and 0 otherwise.\n",
+    "\n",
+    "The edges have capacity $c \\in \\mathbb{R}_+^m$, so we have $Rf \\leq c$. The objective is to maximize the total utility, which is $U(f) = \\sum_i U_i(f_i)$, with\n",
+    "\n",
+    "\\begin{equation}\n",
+    "U_i(f_i) = \\begin{cases}\n",
+    "w_i f_i \\quad &\\text{if} \\quad f^\\mathrm{min}_i \\leq f_i \\leq f^\\mathrm{max}_i \\\\\n",
+    "-\\infty \\quad &\\text{otherwise}\n",
+    "\\end{cases}\n",
+    "\\end{equation}\n",
+    "\n",
+    "To summarize in vector form, we want to solve the following optimization problem:\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{II}\n",
-    "\\text{maximize} \\quad &\\mathrm{tr} \\left( W^T X \\right)\\\\\n",
-    "\\text{subject to} \\quad &X^\\mathrm{min} \\leq X \\leq X^\\mathrm{max} \\\\\n",
-    "&X^T \\mathbb{1} \\leq r\n",
+    "\\text{maximize} \\quad &w^T f \\\\\n",
+    "\\text{subject to} \\quad &R f \\leq c \\\\\n",
+    "&f^\\mathrm{min} \\leq f \\leq f^\\mathrm{max}\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "The minimum and maximum amounts of resources to be allocated are denoted by $X^\\mathrm{min} \\geq 0$ and $X^\\mathrm{max} \\geq X^\\mathrm{min}$, respectively, while $r$ is the vector of available resources. The problem is feasible if $\\left(X^\\mathrm{min}\\right)^T \\mathbb{1} \\leq r$ and $X^\\mathrm{min} \\leq X^\\mathrm{max}$.\n",
+    "with parameters $w\\geq 0$, $R$, $c \\geq 0$ and $0 \\leq f^\\mathrm{min} \\leq f^\\mathrm{max}$.\n",
     "\n",
     "Let's define the corresponding CVXPY problem:"
    ]
@@ -34,20 +45,20 @@
     "n, m = 100, 10\n",
     "\n",
     "# define variable\n",
-    "X = cp.Variable((n, m), name='X')\n",
+    "f = cp.Variable(n, name='w')\n",
     "\n",
     "# define parameters\n",
-    "W = cp.Parameter((n, m), name='W')\n",
-    "X_min = cp.Parameter((n, m), name='X_min')\n",
-    "X_max = cp.Parameter((n, m), name='X_max')\n",
-    "r = cp.Parameter(m, name='r')\n",
+    "R = cp.Parameter((m, n), name='R')\n",
+    "c = cp.Parameter(m, nonneg=True, name='c')\n",
+    "w = cp.Parameter(n, nonneg=True, name='w')\n",
+    "f_min = cp.Parameter(n, nonneg=True, name='f_min')\n",
+    "f_max = cp.Parameter(n, nonneg=True, name='f_max')\n",
     "\n",
     "# define objective\n",
-    "objective = cp.Maximize(cp.trace(W.T@X))\n",
+    "objective = cp.Maximize(w@f)\n",
     "\n",
     "# define constraints\n",
-    "constraints = [X_min <= X, X<= X_max, \n",
-    "               X.T@np.ones(n) <= r]\n",
+    "constraints = [R@f <= c, f_min <= f, f <= f_max]\n",
     "\n",
     "# define problem\n",
     "problem = cp.Problem(objective, constraints)"
@@ -66,12 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(0)\n",
-    "\n",
-    "W.value = np.ones((n, m)) + 0.1*np.random.rand(n, m)\n",
-    "X_min.value = np.random.rand(n, m)\n",
-    "X_max.value = 10 + np.random.rand(n, m)\n",
-    "r.value = np.matmul(X_min.value.T, np.ones(n)) + 10*np.random.rand(m)\n",
+    "# TODO\n",
     "\n",
     "val = problem.solve(solver='OSQP')"
    ]
@@ -93,7 +99,7 @@
     "sys.path.append('../')\n",
     "import cvxpygen as cpg\n",
     "\n",
-    "cpg.generate_code(problem, code_dir='resource_code')"
+    "cpg.generate_code(problem, code_dir='network_code')"
    ]
   },
   {
@@ -109,21 +115,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from resource_code.cpg_solver import cpg_solve\n",
+    "from network_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
     "import pickle\n",
     "import time\n",
     "\n",
     "# load the serialized problem formulation\n",
-    "with open('resource_code/problem.pickle', 'rb') as f:\n",
+    "with open('network_code/problem.pickle', 'rb') as f:\n",
     "    prob = pickle.load(f)\n",
     "\n",
     "# assign parameter values\n",
-    "np.random.seed(0)\n",
-    "prob.param_dict['W'].value = np.ones((n, m)) + 0.1*np.random.rand(n, m)\n",
-    "prob.param_dict['X_min'].value = np.random.rand(n, m)\n",
-    "prob.param_dict['X_max'].value = 10 + np.random.rand(n, m)\n",
-    "prob.param_dict['r'].value = np.matmul(prob.param_dict['X_min'].value.T, np.ones(n)) + 10*np.random.rand(m)\n",
+    "# TODO\n",
     "\n",
     "# solve problem conventionally\n",
     "t0 = time.time()\n",
