--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -6,45 +6,51 @@
    "source": [
     "## Portfolio Optimization Example\n",
     "\n",
-    "Consider the following optimization problem over the portfolio $w\\in \\mathbb{R}^n$ with expected return $\\alpha^\\intercal w$, risk aversion factor $\\gamma$, asset covariance matrix $\\Sigma$, and transaction (short-selling) cost $\\kappa_\\mathrm{tc(sh)}$:\n",
+    "Consider the following optimization problem over the portfolio $w\\in \\mathbb{R}^n$. The return $r$ has expected value $\\alpha$ and covariance $\\Sigma \\in \\mathbb{S}_{++}^n$. The risk aversion factor is denoted by $\\gamma \\geq 0$, and transaction (short-selling) cost is denoted by $\\kappa_\\mathrm{tc(sh)} \\geq 0$:\n",
     "\n",
-    "\\begin{align}\n",
-    "\\max_{w}. \\quad &\\alpha^\\intercal w - \\gamma w^\\intercal \\Sigma w - \\kappa_\\mathrm{tc}^\\intercal |w-w^\\mathrm{prev}| + \\kappa_\\mathrm{sh}^\\intercal (w)_- \\\\\n",
-    "\\text{s.t.} \\quad &\\mathbb{1}^\\intercal w = 1 \\\\\n",
+    "\\begin{equation}\n",
+    "\\begin{array}{II}\n",
+    "\\text{maximize} \\quad &\\alpha^T w - \\gamma w^T \\Sigma w - \\kappa_\\mathrm{tc}^T |w-w^\\mathrm{prev}| + \\kappa_\\mathrm{sh}^T (w)_- \\\\\n",
+    "\\text{subject to} \\quad &\\mathbb{1}^T w = 1 \\\\\n",
     "&\\Vert w \\Vert_1 \\leq L\n",
-    "\\end{align}\n",
+    "\\end{array}\n",
+    "\\end{equation}\n",
     "\n",
-    "The previous portfolio is denoted by $w^\\mathrm{prev}$, $(\\cdot)_-$ represents the argument's negative part, and $L$ is the maximum amount of positions.\n",
+    "The previous portfolio is $w^\\mathrm{prev}$, $(\\cdot)_-$ represents the argument's negative part, and $L \\geq 1$ is the maximum value of total long positions plus the total magnitude of short positions.\n",
     "\n",
-    "With $\\Sigma = F \\Sigma^f F^\\intercal + D$, we can rewrite the problem as,\n",
+    "With the factor model $\\Sigma = F \\Sigma^f F^T + D$ \\[1\\], we can rewrite an equivalent and [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming) problem:\n",
     "\n",
-    "\\begin{align}\n",
-    "\\max_{w, f, t_\\mathrm{tc}, t_\\mathrm{sh}}. \\quad &a^\\intercal w - \\Vert f \\Vert_2^2 - \\Vert \\tilde{D} w\\Vert_2^2 - k_\\mathrm{tc}^\\intercal t_\\mathrm{tc} + k_\\mathrm{sh}^\\intercal t_\\mathrm{sh} \\\\\n",
-    "\\text{s.t.} \\quad &f = \\tilde{F}^\\intercal w \\\\\n",
-    "&\\mathbb{1}^\\intercal w = 1 \\\\\n",
+    "\\begin{equation}\n",
+    "\\begin{array}{II}\n",
+    "\\text{maximize} \\quad &a^T w - \\Vert \\left(\\Sigma^f\\right)^{1/2} f \\Vert_2^2 - \\Vert D^{1/2} w\\Vert_2^2 - k_\\mathrm{tc}^T |\\Delta w| + k_\\mathrm{sh}^T (w)_- \\\\\n",
+    "\\text{subject to} &f = F^T w \\\\\n",
+    "&\\mathbb{1}^T w = 1 \\\\\n",
     "&\\Vert w \\Vert_1 \\leq L \\\\\n",
-    "&|w-w^\\mathrm{prev}| \\leq t_\\mathrm{tc} \\\\\n",
-    "&(w)_- \\geq t_\\mathrm{sh} \n",
-    "\\end{align}\n",
+    "&\\Delta w = w-w^\\mathrm{prev} \\\\\n",
+    "\\end{array}\n",
+    "\\end{equation}\n",
     "\n",
     "parameterized by:\n",
     "\n",
-    "\\begin{align}\n",
-    "a &= \\frac{\\alpha}{\\gamma} \\\\\n",
-    "\\tilde{F} &= F \\left( \\Sigma^f\\right)^{1/2} \\\\\n",
-    "\\tilde{D} &= D^{1/2} \\\\\n",
-    "k_\\mathrm{tc} &= \\frac{\\kappa_\\mathrm{tc}}{\\gamma} \\\\\n",
-    "k_\\mathrm{sh} &= \\frac{\\kappa_\\mathrm{sh}}{\\gamma} \\\\\n",
-    "&w^\\mathrm{prev} \\\\\n",
-    "&L\n",
-    "\\end{align}\n",
+    "\\begin{equation}\n",
+    "\\begin{array}{II}\n",
+    "a = \\frac{\\alpha}{\\gamma} \\\\\n",
+    "F \\\\\n",
+    "\\left(\\Sigma^f\\right)^{1/2} \\\\\n",
+    "D^{1/2} \\\\\n",
+    "k_\\mathrm{tc} = \\frac{\\kappa_\\mathrm{tc}}{\\gamma} \\\\\n",
+    "k_\\mathrm{sh} = \\frac{\\kappa_\\mathrm{sh}}{\\gamma} \\\\\n",
+    "w^\\mathrm{prev} \\\\\n",
+    "L\n",
+    "\\end{array}\n",
+    "\\end{equation}\n",
     "\n",
     "Let's define the corresponding CVXPY problem:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,31 +62,31 @@
     "\n",
     "# define variables\n",
     "w = cp.Variable(n, name='w')\n",
+    "delta_w = cp.Variable(n, name='delta_w')\n",
     "f = cp.Variable(m, name='f')\n",
-    "t_tc = cp.Variable(n, name='t_tc')\n",
-    "t_sh = cp.Variable(n, name='t_sh')\n",
     "\n",
     "# define parameters\n",
     "a = cp.Parameter(n, name='a')\n",
-    "Ft = cp.Parameter((n, m), name='Ft')\n",
-    "Dt = cp.Parameter((n, n), diag=True, name='Dt')\n",
-    "k_tc = cp.Parameter(n, name='k_tc')\n",
-    "k_sh = cp.Parameter(n, name='k_sh')\n",
+    "F = cp.Parameter((n, m), name='F')\n",
+    "Sig_f_sqrt = cp.Parameter((m, m), name='Sig_f_sqrt')\n",
+    "D_sqrt = cp.Parameter((n, n), diag=True, name='D_sqrt')\n",
+    "k_tc = cp.Parameter(n, nonneg=True, name='k_tc')\n",
+    "k_sh = cp.Parameter(n, nonneg=True, name='k_sh')\n",
     "w_prev = cp.Parameter(n, name='w_prev')\n",
     "L = cp.Parameter(nonneg=True, name='L')\n",
     "\n",
     "# define objective\n",
     "objective = cp.Maximize(a@w\n",
-    "                        -cp.sum_squares(f)\n",
-    "                        -cp.sum_squares(Dt@w)\n",
-    "                        -k_tc@t_tc\n",
-    "                        +k_sh@t_sh)\n",
+    "                        -cp.sum_squares(Sig_f_sqrt@f)\n",
+    "                        -cp.sum_squares(D_sqrt@w)\n",
+    "                        -k_tc@cp.abs(delta_w)\n",
+    "                        +k_sh@cp.minimum(0, w))\n",
     "\n",
     "# define constraints\n",
-    "constraints = [f == Ft.T@w, np.ones(n)@w == 1, \n",
+    "constraints = [f == F.T@w,\n",
+    "               np.ones(n)@w == 1, \n",
     "               cp.norm(w, 1) <= L, \n",
-    "               cp.abs(w-w_prev)<=t_tc, \n",
-    "               t_sh<=cp.minimum(0, w)]\n",
+    "               delta_w == w-w_prev]\n",
     "\n",
     "# define problem\n",
     "problem = cp.Problem(objective, constraints)"
@@ -106,8 +112,9 @@
     "kappa_sh = 20*np.ones(n)\n",
     "\n",
     "a.value = alpha/gamma\n",
-    "Ft.value = np.random.randn(n, m)\n",
-    "Dt.value = np.diag(np.ones(n))\n",
+    "F.value = np.random.randn(n, m)\n",
+    "Sig_f_sqrt.value = np.diag(np.ones(m))\n",
+    "D_sqrt.value = np.diag(np.ones(n))\n",
     "k_tc.value = kappa_tc/gamma\n",
     "k_sh.value = kappa_sh/gamma\n",
     "w_prev.value = np.zeros(n)\n",
@@ -161,8 +168,9 @@
     "# assign parameter values\n",
     "np.random.seed(0)\n",
     "prob.param_dict['a'].value = alpha/gamma\n",
-    "prob.param_dict['Ft'].value = np.random.randn(n, m)\n",
-    "prob.param_dict['Dt'].value = np.diag(np.ones(n))\n",
+    "prob.param_dict['F'].value = np.random.randn(n, m)\n",
+    "prob.param_dict['Sig_f_sqrt'].value = np.diag(np.ones(m))\n",
+    "prob.param_dict['D_sqrt'].value = np.diag(np.ones(n))\n",
     "prob.param_dict['k_tc'].value = kappa_tc/gamma\n",
     "prob.param_dict['k_sh'].value = kappa_sh/gamma\n",
     "prob.param_dict['w_prev'].value = np.zeros(n)\n",
@@ -184,6 +192,23 @@
     "t1 = time.time()\n",
     "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
     "print('C objective function value:', val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "\n",
+    "\\[1\\] Victor Ng, Robert F. Engle, Michael Rothschild,\n",
+    "A multi-dynamic-factor model for stock returns,\n",
+    "Journal of Econometrics,\n",
+    "Volume 52, Issues 1–2,\n",
+    "1992,\n",
+    "Pages 245-266,\n",
+    "ISSN 0304-4076,\n",
+    "https://doi.org/10.1016/0304-4076(92)90072-Y.\n",
+    "(https://www.sciencedirect.com/science/article/pii/030440769290072Y)"
    ]
   }
  ],
