Adjusted example notebooks.

--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -45,6 +45,8 @@
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
+    "Note that we divided the objective function by the risk aversion factor $\\gamma$. This way, updating the value of $\\gamma$ only affects the linear part of the objective function, avoiding to compute a matrix factorization when solving the problem repeatedly.\n",
+    "\n",
     "Let's define the corresponding CVXPY problem:"
    ]
   },
