Small adjustments to notebooks.

--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Network Flow Optimization Example\n",
+    "## Network Flow Example\n",
     "\n",
     "We have a network of $m$ directed edges that support $n$ flows, each of which goes over a fixed path in the graph.  We denote the flow values as $f \\in \\mathbb{R}_+^n$.  The resulting traffic on the $m$ edges is given by $R f$, where $R \\in \\{0,1\\}^{m \\times n}$ is the routing matrix, with $R_{ij}=1$ if flow $j$ goes over edge $i$, and 0 otherwise.\n",
     "\n",
