--- a/examples/actuator.ipynb
+++ b/examples/actuator.ipynb
@@ -13,7 +13,7 @@
     "Having this freedom of choice, we want to minimize energy consumption, modeled as $\\kappa^T | u |$ (with $\\kappa \\geq 0$), while discouraging rapid changes of the actuation values, i.e., $\\lambda^\\mathrm{sm} \\Vert u-u^\\mathrm{prev} \\Vert_2^2$ with $\\lambda^\\mathrm{sm} \\geq 0$ and $u^\\mathrm{prev}$ being the actuation of the previous time step. Given the bounds $u^\\mathrm{min}$ and $u^\\mathrm{max}$ $(u^\\mathrm{min} \\leq u^\\mathrm{max})$ on $u$, there might be cases when the desired control input $w$ is infeasible. Hence, we only softly penalize deviations between desired and actual control input with the cost term $\\Vert A u - w \\Vert_2^2$. The resulting optimization problem is the following:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{II}\n",
+    "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad &\\Vert A u - w \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert u-u^\\mathrm{prev} \\Vert_2^2 + \\kappa^T | u |\\\\\n",
     "\\text{subject to} \\quad &u^\\mathrm{min} \\leq u \\leq u^\\mathrm{max}\n",
     "\\end{array}\n",
@@ -22,7 +22,7 @@
     "We introduce the variable $\\Delta u = u - u^\\mathrm{prev}$ to make the problem [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming):\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{II}\n",
+    "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad &\\Vert A u - w \\Vert_2^2  + \\lambda^\\mathrm{sm} \\Vert \\Delta u \\Vert_2^2 + \\kappa^T | u |\\\\\n",
     "\\text{subject to} \\quad &u^\\mathrm{min} \\leq u \\leq u^\\mathrm{max} \\\\\n",
     "&\\Delta u = u-u^\\mathrm{prev}\n",
