--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -20,7 +20,7 @@
     "To summarize in vector form, we want to solve the following optimization problem:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{II}\n",
+    "\\begin{array}{ll}\n",
     "\\text{maximize} \\quad &w^T f \\\\\n",
     "\\text{subject to} \\quad &R f \\leq c \\\\\n",
     "&f^\\mathrm{min} \\leq f \\leq f^\\mathrm{max}\n",
