--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -9,7 +9,7 @@
     "Consider the following optimization problem over the portfolio $w\\in \\mathbb{R}^n$. The return $r$ has expected value $\\alpha$ and covariance $\\Sigma \\in \\mathbb{S}_{++}^n$. The risk aversion factor is denoted by $\\gamma \\geq 0$, and transaction (short-selling) cost is denoted by $\\kappa_\\mathrm{tc(sh)} \\geq 0$:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{II}\n",
+    "\\begin{array}{ll}\n",
     "\\text{maximize} \\quad &\\alpha^T w - \\gamma w^T \\Sigma w - \\kappa_\\mathrm{tc}^T |w-w^\\mathrm{prev}| + \\kappa_\\mathrm{sh}^T (w)_- \\\\\n",
     "\\text{subject to} \\quad &\\mathbb{1}^T w = 1 \\\\\n",
     "&\\Vert w \\Vert_1 \\leq L\n",
@@ -21,7 +21,7 @@
     "With the factor model $\\Sigma = F \\Sigma^f F^T + D$ \\[1\\], we can rewrite an equivalent and [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming) problem:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{II}\n",
+    "\\begin{array}{ll}\n",
     "\\text{maximize} \\quad &a^T w - \\Vert \\left(\\Sigma^f\\right)^{1/2} f \\Vert_2^2 - \\Vert D^{1/2} w\\Vert_2^2 - k_\\mathrm{tc}^T |\\Delta w| + k_\\mathrm{sh}^T (w)_- \\\\\n",
     "\\text{subject to} &f = F^T w \\\\\n",
     "&\\mathbb{1}^T w = 1 \\\\\n",
