--- a/examples/resource.ipynb
+++ b/examples/resource.ipynb
@@ -9,7 +9,7 @@
     "Assume we have to assign resources of $m$ classes to $n$ kinds of jobs. This resource allocation is encoded in $X \\in \\mathbb{R}^{n \\times m}$, with $X_{i,j}$ denoting the amount of resource $j$ allocated to job $i$. Given the utility matrix $W$, we want to solve the following optimization problem:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{II}\n",
+    "\\begin{array}{ll}\n",
     "\\text{maximize} \\quad &\\mathrm{tr} \\left( W^T X \\right)\\\\\n",
     "\\text{subject to} \\quad &X^\\mathrm{min} \\leq X \\leq X^\\mathrm{max} \\\\\n",
     "&X^T \\mathbb{1} \\leq r\n",
