Fixed rendering issue when viewing notebooks on github.com.

--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -33,7 +33,7 @@
     "parameterized by:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\begin{array}{II}\n",
+    "\\begin{array}{ll}\n",
     "a = \\frac{\\alpha}{\\gamma} \\\\\n",
     "F \\\\\n",
     "\\left(\\Sigma^f\\right)^{1/2} \\\\\n",
